kubernetes/templates/httproute/internal/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: "${APP}-internal"
  namespace: ${NAMESPACE:default}
  labels:
    app.kubernetes.io/name: ${APP}
    app.kubernetes.io/component: routing
spec:
  hostnames:
    - "${SUBDOMAIN}.dcunha.io"
  parentRefs:
    - name: internal-gateway
      namespace: default
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ${APP}
          kind: Service
          namespace: ${NAMESPACE:default}
          port: ${ACCESS_PORT}
          weight: 1
